[package]
name = "nanomsg-multi"
version = "0.1.0"
authors = ["Jacek Całusiński <forger@forger.pl>"]

[workspace]

[dependencies]
nanomsg-multi-server = { path = "nanomsg-multi-server" }
colored_logger = { git = "ssh://git@gitlab.cs.int/rust/colored-logger.git" }
flexi_logger = "0.6.13"
log = "0.4.1"
futures = "0.1.18"
tokio-core = "0.1.12"
nanomsg = { git = "ssh://git@gitlab.cs.int/rust/nanomsg-rs.git" }
nanomsg-tokio = { git = "ssh://git@gitlab.cs.int/rust/nanomsg-tokio.git" }
rand = "0.4.2"
