[package]
name = "nanomsg-multi"
version = "0.1.0"
authors = ["Jacek Całusiński <forger@forger.pl>"]
edition = "2018"

[workspace]

[dependencies]
nanomsg-multi-server = { path = "nanomsg-multi-server" }
colored_logger = { git = "https://github.com/forgerpl/colored_logger.git" }
flexi_logger = "0.14.8"
log = "0.4.8"
futures = "^0.1.29"
tokio-core = "0.1.17"
nanomsg-tokio = { git = "https://github.com/forgerpl/nanomsg-tokio.git" }
rand = "0.7.3"
nanomsg = "0.7.2"
